--- a/src/app/components/sections/hero/hero.component.html
+++ b/src/app/components/sections/hero/hero.component.html
@@ -5,17 +5,17 @@
     <div class="hero-icon hero-icon-1">
       <img src="/assets/screen_10.png" alt="Business Card">
     </div>
-    
+
     <!-- Top Right Icon -->
     <div class="hero-icon hero-icon-2">
       <img src="/assets/screen_12.png" alt="Art Card">
     </div>
-    
+
     <!-- Bottom Left Icon -->
     <div class="hero-icon hero-icon-3">
       <img src="/assets/screen_11.png" alt="Design Card">
     </div>
-    
+
     <!-- Bottom Right Icon -->
     <div class="hero-icon hero-icon-4">
       <img src="/assets/screen_13.png" alt="UI Design Card">
@@ -28,88 +28,52 @@
       <p>Jobs & Job search. Find jobs in global. Executive jobs & work.</p>
     </div>
     <div class="heroSearch d-flex flex-column flex-md-row gap-md-3">
-      <div
-        class="flex-fill customSelectWrapper"
-        [class.open]="isSelectOpen1"
-        (click)="toggleSelectOpen1()"
-      >
+      <div class="flex-fill customSelectWrapper" [class.open]="isSelectOpen1" (click)="toggleSelectOpen()">
         <label for="job_category" class="form-label">Job Categories</label>
-        <select
-          id="job_category"
-          class="formSelect"
-          (blur)="isSelectOpen1 = false"
-        >
-          <option value="developer">Developer</option>
-          <option value="coder">Coder</option>
-          <option value="finance">Finance</option>
-          <option value="accounting">Accounting</option>
-          <option value="design">Design</option>
-          <option value="artist">Artist</option>
-          <option value="application">Application</option>
-          <option value="marketing">Marketing</option>
-          <option value="business">Business</option>
-          <option value="web">Web</option>
-          <option value="data">Data</option>
-          <option value="scientist">Scientist</option>
-          <option value="designer">Designer</option>
-          <option value="uxui">UX/UI</option>
-          <option value="manager">Manager</option>
-          <option value="engineer">Engineer</option>
-          <option value="writer">Writer</option>
-          <option value="content">Content</option>
-          <option value="graphic">Graphic</option>
-          <option value="management">Management</option>
-          <option value="product">Product</option>
+        <select id="job_category" class="formSelect form-control search-input" (blur)="isSelectOpen1 = false"
+          [(ngModel)]="searchCategory">
+          <!-- default placeholder -->
+          <option [ngValue]="null" disabled [selected]="searchCategory === null">Select an option</option>
+
+          <!-- “Clear” option -->
+          <option [ngValue]="0">None</option>
+
+          <!-- categories from backend -->
+          <option *ngFor="let cat of allCategories" [ngValue]="cat.id">
+            {{ cat.name }}
+          </option>
         </select>
         <span class="customArrow"></span>
       </div>
-      <hr/>
-      <div
-        class="flex-fill customSelectWrapper"
-        [class.open]="isSelectOpen2"
-        (click)="toggleSelectOpen2()"
-      >
+      <hr />
+      <div class="flex-fill position-relative">
         <label for="location" class="form-label">Location</label>
-        <select id="location" class="formSelect" (blur)="isSelectOpen2 = false">
-          <option value="">Spain, Barcelona</option>
-          <option value="">USA, New York</option>
-          <option value="">USA, Alaska</option>
-          <option value="">USA, California</option>
-          <option value="">UK, London</option>
-          <option value="">USA, Mountain View</option>
-          <option value="">Germany, Berlin</option>
-          <option value="">USA, Cupertino</option>
-          <option value="">USA, Menlo Park</option>
-          <option value="">USA, Redmond</option>
-          <option value="">USA, San Jose</option>
-          <option value="">USA, Palo Alto</option>
-        </select>
-        <span class="customArrow"></span>
+        <input id="location" type="text" class="form-control search-input" [(ngModel)]="searchLocation"
+          placeholder="Lagos, Remote" />
+        <i title="Clear Location" class="fas fa-times-circle" (click)="clearLocation()"
+          *ngIf="searchLocation && searchLocation.length > 0"
+          style="position: absolute; right: 10px; top: 56%; cursor: pointer; color: #7c7c7c; font-size: 1.2rem;"></i>
       </div>
-      <hr/>
-      <div class="flex-fill">
+      <hr />
+      <div class="flex-fill position-relative">
         <label for="searchBox" class="form-label">Keywords or Title</label>
-        <input type="text" placeholder="Design, branding" id="searchBox" />
+        <input type="text" class="form-control search-input" [(ngModel)]="searchKeyword" placeholder="Design, branding"
+          id="searchBox" style="width: 100%; height: 65%;" />
+        <i title="Clear Keyword" class="fas fa-times-circle" (click)="clearKeyword()"
+          *ngIf="searchKeyword && searchKeyword.length > 0"
+          style="position: absolute; right: 10px; top: 56%; cursor: pointer; color: #7c7c7c; font-size: 1.2rem;"></i>
       </div>
-      <hr/>
+      <hr />
       <div class="d-flex align-items-end">
-        <button class="searchBtn">SEARCH</button>
+        <button class="searchBtn" (click)="onSearch()">SEARCH</button>
       </div>
     </div>
     <div class="uploadCV mt-4">
-      <label
-        for="cvUpload"
-        class="btn px-2 py-2 px-sm-3 py-sm-2 rounded-3 fw-medium"
-      >
+      <label for="cvUpload" class="btn px-2 py-2 px-sm-3 py-sm-2 rounded-3 fw-medium">
         Upload your CV
         <i class="bi bi-file-earmark-arrow-up"></i>
       </label>
-      <input
-        type="file"
-        id="cvUpload"
-        hidden
-        (change)="onFileSelected($event)"
-      />
+      <input type="file" id="cvUpload" hidden (change)="onFileSelected($event)" />
       <span id="fileName" class="ms-3 text-muted d-none">No file chosen</span>
     </div>
   </div>
