--- a/src/app/components/sections/navbar/navbar.component.html
+++ b/src/app/components/sections/navbar/navbar.component.html
@@ -110,8 +110,7 @@
           <a class="nav-link" routerLink="/jobs" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Jobs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex justify-content-between align-items-center" (click)="toggleExploreDropdown()"
-            href="#">
+          <a class="nav-link d-flex justify-content-between align-items-center" (click)="toggleExploreDropdown()">
             Explore
             <span [class.rotate]="isExploreOpen" class="ms-2">&#9662;</span> <!-- Down arrow -->
           </a>
