feat(cta): update button links to direct users to job and post-job pages feat(fancybanner): add routerLink to "Explore All" button for job listings feat(job-card): replace href with routerLink for job exploration and posting actions feat(q-a): update support link to navigate to contact page using routerLink

--- a/src/app/components/sections/cta/cta.component.html
+++ b/src/app/components/sections/cta/cta.component.html
@@ -6,8 +6,8 @@
       <p>Signup and start find your job or talents.</p>
     </div>
     <div class="userSetup-btns">
-      <button class="btn1" routerLink="/signup">Looking for job?</button>
-      <button class="btn2" routerLink="/signup">Post a job</button>
+      <button class="btn1" routerLink="/jobs">Looking for job?</button>
+      <button class="btn2" routerLink="/post-job">Post a job</button>
     </div>
   </div>
   <hr />
