--- a/src/app/components/sections/fancybanner/fancybanner.component.html
+++ b/src/app/components/sections/fancybanner/fancybanner.component.html
@@ -9,7 +9,7 @@
         </p>
         <button>
           Find your job.
-          <span class="fw-light text-decoration-underline">Explore All</span
+          <span class="fw-light text-decoration-underline" routerLink="/jobs">Explore All</span
           ><span class="ms-2">></span>
         </button>
       </div>
