--- a/src/app/components/sections/job-card/job-card.component.html
+++ b/src/app/components/sections/job-card/job-card.component.html
@@ -2,7 +2,7 @@
   <div class="d-lg-flex align-items-lg-center justify-content-lg-between">
     <h1 class="header">New Job Listing</h1>
     <div class="explore-all mb-4 d-none d-lg-block d-sm-none d-md-none">
-      <a class="btn" href="">Explore all jobs &gt;</a>
+      <a class="btn" routerLink="/jobs">Explore all jobs &gt;</a>
     </div>
   </div>
 
@@ -45,12 +45,12 @@
   </div>
 
   <div class="explore-all text-center mt-5 mb-4 d-lg-none">
-    <a class="btn" href="">Explore all jobs &gt;</a>
+    <a class="btn" routerLink="/jobs">Explore all jobs &gt;</a>
   </div>
 
 
   <div class="job-posting">
     <div class="job-text">Do you want to post a job for your company? We can help.</div>
-    <span class="job-link"><a href="">Click here</a></span>
+    <span class="job-link"><a routerLink="/post-job">Click here</a></span>
   </div>
 </div>
