--- a/src/app/components/sections/q-a/q-a.component.html
+++ b/src/app/components/sections/q-a/q-a.component.html
@@ -133,6 +133,6 @@
     </div>
   </div>
   <div class="customer-support">
-    <div>Don't find the answer? <span>We can help.</span> <a href="">Click here</a></div>
+    <div>Don't find the answer? <span>We can help.</span> <a routerLink="/contact">Click here</a></div>
   </div>
 </div>
