--- a/src/app/job-details/job-details.component.html
+++ b/src/app/job-details/job-details.component.html
@@ -205,7 +205,8 @@
               <div class="card-body">
                 <div class="company-info">
                   <div class="company-logo">
-                    <i class="fas fa-building"></i>
+                    <!-- <i class="fas fa-building"></i> -->
+                    <img [src]="job.logo_url" alt="Company Logo" style="width: 50px; height: 50px; object-fit: cover;" />
                   </div>
                   <div class="company-details">
                     <h5>{{ job.name || 'Company Name' }}</h5>
