--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -283,7 +283,7 @@
           <div class="col-md-6 col-xl-4 mb-4" *ngFor="let job of jobs">
             <div class="job-card">
               <div class="job-card-header">
-                <div class="company-logo">{{ job.logo }}</div>
+                <img [src]="job.company_logo" alt="Company Logo" style="width: 50px; height: 50px; object-fit: cover;" />
                 <button class="btn btn-sm btn-outline-secondary bookmark-btn" [class.active]="job.isSaved"
                   [class.loading]="job.isSaving" [disabled]="job.isSaving" (click)="onToggleSaveJob(job)"
                   *ngIf="!userRole || userRole === 'job_seeker'">
