feat(auth): enhance authentication checks and role-based content display across components

--- a/src/app/components/sections/cta/cta.component.html
+++ b/src/app/components/sections/cta/cta.component.html
@@ -1,5 +1,4 @@
-<hr *ngIf="isLoggedIn()" />
-<div class="userSetup-wrapper" *ngIf="!isLoggedIn()">
+<div class="userSetup-wrapper">
   <hr />
   <div class="userSetup-content">
     <div class="userSetup-text">
