--- a/src/app/components/sections/q-a/q-a.component.html
+++ b/src/app/components/sections/q-a/q-a.component.html
@@ -136,3 +136,5 @@
     <div>Don't find the answer? <span>We can help.</span> <a routerLink="/contact">Click here</a></div>
   </div>
 </div>
+
+<hr class="hr-line" *ngIf="isLoggedIn()" />
