--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,6 +9,13 @@
   margin: 0 auto;
 }
 
+.quick-actions {
+  margin: 2rem 0;
+  text-align: center;
+}
+
+
+
 /* CSS utility class (for basic reusability) */
 /* .btn {
   padding: 0.75rem 1.5rem;
