--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div *ngIf="loading" class="loader-overlay">
-    <div class="global-spinner"></div>
+<!-- Global Loader Overlay -->
+<div *ngIf="loading" class="loader-overlay" aria-live="polite" aria-label="Loading page">
+  <img src="/assets/jobnetlogo2.png" alt="JobNet Logo" class="loader-logo" />
+  <p class="loading-text">Loading....</p>
 </div>
+
 <router-outlet></router-outlet>
 <app-scrolltopbtn></app-scrolltopbtn>
