--- a/src/app/components/sections/hero/hero.component.html
+++ b/src/app/components/sections/hero/hero.component.html
@@ -74,7 +74,7 @@
         <i class="bi bi-file-earmark-arrow-up"></i>
       </label>
       <input type="file" id="cvUpload" hidden (change)="onFileSelected($event)" />
-      <span id="fileName" class="ms-3 text-muted d-none">No file chosen</span>
+      <span class="ms-3 text-muted">{{ selectedFileName }}</span> <!-- Use binding instead of DOM manipulation -->
     </div>
   </div>
 </section>
