--- a/src/app/components/sections/hero/hero.component.html
+++ b/src/app/components/sections/hero/hero.component.html
@@ -71,8 +71,8 @@
 
     <div class="uploadCV mt-4 d-flex flex-column flex-md-row align-items-md-center"
       *ngIf="!isLoggedIn() || getUserRole() === 'job_seeker'">
-      <label for="cvUpload" class="btn px-2 py-2 px-sm-3 py-sm-2 rounded-3 fw-medium">
-        {{ uploadedCV ? 'Replace CV' : 'Upload your CV' }}
+      <label for="cvUpload" *ngIf="!uploadedCV" class="btn px-2 py-2 px-sm-3 py-sm-2 rounded-3 fw-medium">
+        Upload your CV
         <i class="bi bi-file-earmark-arrow-up"></i>
       </label>
       <input type="file" id="cvUpload" hidden (change)="onFileSelected($event)" accept=".pdf,.doc,.docx" />
@@ -84,6 +84,8 @@
 
       <div *ngIf="uploadedCV && !isUploading" class="d-flex align-items-center mt-2 mt-md-0 ms-md-3">
         <span class="text-success me-2">{{ selectedFileName }}</span>
+        <i title="Download CV" class="fas fa-download" (click)="downloadCV()"
+          style="cursor: pointer; color: #28a745; font-size: 1.2rem; margin-right: 15px;"></i>
         <button class="btn btn-sm btn-outline-danger" (click)="deleteCV()" title="Delete CV">
           <i class="bi bi-trash"></i> Delete
         </button>
